// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-blockquote> component <bolt-blockquote> align variations: center 1`] = `
<bolt-blockquote align-items="center">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-center c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> align variations: left 1`] = `
<bolt-blockquote align-items="left">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> align variations: right 1`] = `
<bolt-blockquote align-items="right">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-end c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> basic usage 1`] = `
<bolt-blockquote>
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> basic usage w/ author 1`] = `
<bolt-blockquote>
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations with inset: horizontal 1`] = `
<bolt-blockquote border="horizontal">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-horizontal"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations with inset: none 1`] = `
<bolt-blockquote border="none">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--borderless"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations with inset: vertical 1`] = `
<bolt-blockquote border="vertical">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations: horizontal 1`] = `
<bolt-blockquote border="horizontal">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-horizontal"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations: none 1`] = `
<bolt-blockquote border="none">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--borderless"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> border variations: vertical 1`] = `
<bolt-blockquote border="vertical">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> indent usage 1`] = `
<bolt-blockquote>
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> indent usage 2`] = `
<bolt-blockquote indent>
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical c-bolt-blockquote--indented"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> renders to Light DOM 2`] = `
<bolt-blockquote
  align-items="center"
  author-image="/fixtures/500x500.jpg"
  author-name="Michelangelo di Lodovico Buonarroti Simoni"
  author-title="Renaissance Artist"
  style=""
>
  <!---->
  
      
      
  <blockquote
    class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-center c-bolt-blockquote--bordered-vertical"
    style=""
  >
    
        
              
    <div
      class="c-bolt-blockquote__logo"
      style=""
    >
      
                
      <!---->
      <!---->
      <img
        alt="PayPal Logo"
        slot="logo"
        src="/fixtures/paypal-logo.svg"
        style=""
      >
        <!---->
        <!---->
        
              
      </img>
    </div>
    
            
        
    <div
      class="c-bolt-blockquote__quote"
      style=""
    >
      
          
      <div
        class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xlarge c-bolt-text-v2--font-weight-semibold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100"
        style=""
      >
        
            
        <!---->
        <!---->
        
        
        <!---->
        <p
          class="is-first-child"
          style=""
        >
          Bolt Blockquote w/ Shadow DOM Manually Disabled
        </p>
        <!---->
        
        
        <!---->
        <p
          class="is-last-child"
          style=""
        >
          Press any key to continue or any other key to quit.
        </p>
        <!---->
        
      
        <!---->
        <!---->
        
          
      </div>
      
        
    </div>
    
        
              
    <footer
      class="c-bolt-blockquote__footer"
      style=""
    >
      
                
      <!---->
      
                    
      <div
        class="c-bolt-blockquote__footer-item"
        style=""
      >
        
                      
      
        <div
          class="c-bolt-blockquote__image"
          style=""
        >
          
        
              
          <img
            alt="Renaissance Artist"
            src="/fixtures/500x500.jpg"
            style=""
          >
            
            
      
          </img>
        </div>
        
    
                    
      </div>
      
                  
      <!---->
      
                    
      <div
        class="c-bolt-blockquote__footer-item"
        style=""
      >
        
                      
      
        <cite
          class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-bold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100"
          style=""
        >
          
        Michelangelo di Lodovico Buonarroti Simoni
      
        </cite>
        
    
                    
      </div>
      
                  
      <!---->
      
                    
      <div
        class="c-bolt-blockquote__footer-item"
        style=""
      >
        
                      
      
        <cite
          class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-regular c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100"
          style=""
        >
          
        Renaissance Artist
      
        </cite>
        
    
                    
      </div>
      
                  
      <!---->
      
              
    </footer>
    
            
      
  </blockquote>
  
    
  <!---->
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> renders to Shadow DOM 2`] = `
<bolt-blockquote
  author-name="Chris Heilmann"
  author-title="Developer Evangelist"
  style=""
>
  
        
  <p
    class="is-first-child is-last-child"
    style=""
  >
    Java is to JavaScript what Car is to Carpet.
  </p>
  
      
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> renders when inside a <form> 2`] = `
<blockquote
  class="c-bolt-blockquote c-bolt-blockquote--xxlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-horizontal"
  style=""
>
  
        
              
  <div
    class="c-bolt-blockquote__logo"
    style=""
  >
    
                
    <!---->
    <!---->
    <img
      alt="Bolt Design System Logo"
      slot="logo"
      src="/fixtures/bolt-logo.svg"
      style="max-width:200px;"
    >
      <!---->
      <!---->
      
              
    </img>
  </div>
  
            
        
  <div
    class="c-bolt-blockquote__quote"
    style=""
  >
    
          
    <div
      class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xlarge c-bolt-text-v2--font-weight-semibold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100"
      style=""
    >
      
            
      <!---->
      <!---->
      
        
      <!---->
      
        
      <!---->
      <p
        class="is-first-child"
        style=""
      >
        Bolt Blockquote w/ Shadow DOM auto-disabled
      </p>
      <!---->
      
        
      <!---->
      <p
        class="is-last-child"
        style=""
      >
        Yeah, but it works on my machine...
      </p>
      <!---->
      
      
      <!---->
      <!---->
      
          
    </div>
    
        
  </div>
  
        
              
  <footer
    class="c-bolt-blockquote__footer"
    style=""
  >
    
                
    <!---->
    
                    
    <div
      class="c-bolt-blockquote__footer-item"
      style=""
    >
      
                      
                    
    </div>
    
                  
    <!---->
    
                    
    <div
      class="c-bolt-blockquote__footer-item"
      style=""
    >
      
                      
      
      <cite
        class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-bold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100"
        style=""
      >
        
        Every Developer, Ever.
      
      </cite>
      
    
                    
    </div>
    
                  
    <!---->
    
                    
    <div
      class="c-bolt-blockquote__footer-item"
      style=""
    >
      
                      
      
      <cite
        class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-regular c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100"
        style=""
      >
        
        Web Developer
      
      </cite>
      
    
                    
    </div>
    
                  
    <!---->
    
              
  </footer>
  
            
      
</blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> size variations: large 1`] = `
<bolt-blockquote size="large">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--large c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--large">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> size variations: xlarge 1`] = `
<bolt-blockquote size="xlarge">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> size variations: xxlarge 1`] = `
<bolt-blockquote size="xxlarge">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xxlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
              is="shadow-root"
  >
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xxlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> with No Quotes renders 2`] = `
<bolt-blockquote
  author-name="Michelangelo di Lodovico Buonarroti Simoni"
  author-title="Renaissance Artist"
  no-quotes=""
  style=""
>
  
        
  <p
    class="is-first-child"
    style=""
  >
    The greater danger for most of us lies not in setting our aim too high and falling short...
  </p>
  
        
  <p
    class="is-last-child"
    style=""
  >
    In fact, the greater danger is setting our aim too low and achieving our mark.
  </p>
</bolt-blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> with lang-specific quotes (de) 2`] = `
<blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
            lang="de"
>
  <div class="c-bolt-blockquote__quote">
    <div class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xlarge c-bolt-text-v2--font-weight-semibold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
      <slot>
      </slot>
    </div>
  </div>
  <footer class="c-bolt-blockquote__footer">
    <div class="c-bolt-blockquote__footer-item">
    </div>
    <div class="c-bolt-blockquote__footer-item">
      <cite class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-bold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
        Michelangelo di Lodovico Buonarroti Simoni
      </cite>
    </div>
    <div class="c-bolt-blockquote__footer-item">
      <cite class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-regular c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
        Renaissance Artist
      </cite>
    </div>
  </footer>
</blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> with lang-specific quotes (en) 2`] = `
<blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
            lang="en"
>
  <div class="c-bolt-blockquote__quote">
    <div class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xlarge c-bolt-text-v2--font-weight-semibold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
      <slot>
      </slot>
    </div>
  </div>
  <footer class="c-bolt-blockquote__footer">
    <div class="c-bolt-blockquote__footer-item">
    </div>
    <div class="c-bolt-blockquote__footer-item">
      <cite class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-bold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
        Michelangelo di Lodovico Buonarroti Simoni
      </cite>
    </div>
    <div class="c-bolt-blockquote__footer-item">
      <cite class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-regular c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
        Renaissance Artist
      </cite>
    </div>
  </footer>
</blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> with lang-specific quotes (fr) 2`] = `
<blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
            lang="fr"
>
  <div class="c-bolt-blockquote__quote">
    <div class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xlarge c-bolt-text-v2--font-weight-semibold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
      <slot>
      </slot>
    </div>
  </div>
  <footer class="c-bolt-blockquote__footer">
    <div class="c-bolt-blockquote__footer-item">
    </div>
    <div class="c-bolt-blockquote__footer-item">
      <cite class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-bold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
        Michelangelo di Lodovico Buonarroti Simoni
      </cite>
    </div>
    <div class="c-bolt-blockquote__footer-item">
      <cite class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-regular c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
        Renaissance Artist
      </cite>
    </div>
  </footer>
</blockquote>
`;

exports[`<bolt-blockquote> component <bolt-blockquote> with lang-specific quotes (ja) 2`] = `
<blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical"
            lang="ja"
>
  <div class="c-bolt-blockquote__quote">
    <div class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xlarge c-bolt-text-v2--font-weight-semibold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
      <slot>
      </slot>
    </div>
  </div>
  <footer class="c-bolt-blockquote__footer">
    <div class="c-bolt-blockquote__footer-item">
    </div>
    <div class="c-bolt-blockquote__footer-item">
      <cite class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-bold c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
        Michelangelo di Lodovico Buonarroti Simoni
      </cite>
    </div>
    <div class="c-bolt-blockquote__footer-item">
      <cite class="c-bolt-text-v2 c-bolt-text-v2--block c-bolt-text-v2--body c-bolt-text-v2--font-size-xsmall c-bolt-text-v2--font-weight-regular c-bolt-text-v2--font-style-regular c-bolt-text-v2--color-theme-headline c-bolt-text-v2--letter-spacing-regular c-bolt-text-v2--align-inherit c-bolt-text-v2--text-transform-regular c-bolt-text-v2--line-height-regular c-bolt-text-v2--opacity-100">
        Renaissance Artist
      </cite>
    </div>
  </footer>
</blockquote>
`;

exports[`<bolt-blockquote> component advanced <bolt-blockquote> usage 1`] = `
<bolt-blockquote border="horizontal">
  <blockquote class="c-bolt-blockquote c-bolt-blockquote--xlarge c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-horizontal"
              is="shadow-root"
  >
    <replace-with-children class="c-bolt-blockquote__logo">
      <bolt-logo slot="logo"
                 class="c-bolt-logo--invert"
      >
        <bolt-image slot="logo"
                    src="/fixtures/paypal.svg"
                    srcset="/fixtures/paypal.svg"
                    sizes="auto"
                    ratio="124/33"
                    placeholder-color="hsl(233, 33%, 97%)"
                    placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
        >
          <bolt-ratio ratio="124/33">
            <replace-with-children class="c-bolt-ratio"
                                   style="padding-bottom: calc((33 / 124) * 100%); --aspect-ratio: 3.7575757575758;"
            >
              <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade js-lazyload"
                   data-srcset="/fixtures/paypal.svg"
                   data-sizes="auto"
                   srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                   src="/fixtures/paypal.svg"
              >
              <noscript>
                <img class="c-bolt-image__image"
                     src="/fixtures/paypal.svg"
                     srcset="/fixtures/paypal.svg"
                >
              </noscript>
            </replace-with-children>
          </bolt-ratio>
        </bolt-image>
      </bolt-logo>
    </replace-with-children>
    <replace-with-grandchildren class="c-bolt-blockquote__quote">
      <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
        <p>
          The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.
        </p>
      </div>
    </replace-with-grandchildren>
    <replace-with-grandchildren>
      <footer class="c-bolt-blockquote__footer">
        <replace-with-grandchildren class="c-bolt-blockquote__footer-item">
          <div class="c-bolt-blockquote__image">
            <bolt-image slot="author-image"
                        src="/fixtures/author.jpg"
                        srcset="/fixtures/author-50.jpg 50w, /fixtures/author-100.jpg 100w, /fixtures/author-200.jpg 200w, /fixtures/author-320.jpg 320w, /fixtures/author-480.jpg 480w, /fixtures/author.jpg 500w"
                        sizes="auto"
                        ratio="500/500"
                        placeholder-color="hsl(233, 33%, 97%)"
                        placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                        no-lazy
                        style="background-color: hsl(233, 33%, 97%);"
            >
              <bolt-ratio ratio="1/1">
                <replace-with-children class="c-bolt-ratio"
                                       style="padding-bottom: calc((1 / 1) * 100%); --aspect-ratio: 1;"
                >
                  <img class="c-bolt-image__image-placeholder"
                       sizes="auto"
                       src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                  >
                  <img class="c-bolt-image__image"
                       srcset="/fixtures/author-50.jpg 50w, /fixtures/author-100.jpg 100w, /fixtures/author-200.jpg 200w, /fixtures/author-320.jpg 320w, /fixtures/author-480.jpg 480w, /fixtures/author.jpg 500w"
                       sizes="auto"
                       src="/fixtures/author.jpg"
                  >
                </replace-with-children>
              </bolt-ratio>
            </bolt-image>
          </div>
        </replace-with-grandchildren>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-name"
                class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall"
          >
            Michelangelo di Lodovico Buonarroti Simoni
          </cite>
        </replace-with-children>
        <replace-with-children class="c-bolt-blockquote__footer-item">
          <cite slot="author-title"
                class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall"
          >
            Renaissance Artist
          </cite>
        </replace-with-children>
      </footer>
    </replace-with-grandchildren>
  </blockquote>
</bolt-blockquote>
`;
